--- a/DutchTreat/DutchTreat/wwwroot/css/site.css
+++ b/DutchTreat/DutchTreat/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-﻿body {
+﻿/*body {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -83,4 +83,4 @@ nav li::after {
 
 nav li:last-of-type::after {
     content: "";
-}
+}*/
